--- a/po/pl.po
+++ b/po/pl.po
@@ -1,29 +1,29 @@
 # Polish translation for menulibre
 # Copyright (c) 2013 Rosetta Contributors and Canonical Ltd 2013
 # This file is distributed under the same license as the menulibre package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
+# Piotr Sokół <psokol@jabster.pl>, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-17 20:50-0400\n"
-"PO-Revision-Date: 2013-04-19 11:12+0000\n"
-"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"PO-Revision-Date: 2013-12-06 17:53+0000\n"
+"Last-Translator: Piotr Sokół <Unknown>\n"
+"Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-05 06:07+0000\n"
-"X-Generator: Launchpad (build 16863)\n"
+"X-Launchpad-Export-Date: 2013-12-07 06:29+0000\n"
+"X-Generator: Launchpad (build 16869)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
-msgstr "Wybierz ikonę"
+msgstr "Wybór ikony"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr "Nazwa ikony"
+msgstr "Nazwa"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
@@ -31,11 +31,11 @@ msgstr "Plik obrazu"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr "Wybierz obraz"
+msgstr "Wybór pliku obrazu"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
-msgstr "<b>Wybierz ikonę</b>"
+msgstr "<b>Wybór ikony</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "48x48"
@@ -63,7 +63,7 @@ msgstr "<b>Podgląd</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Select an icon"
-msgstr "Wybierz ikonę"
+msgstr "Wybór ikony"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "MenuLibre"
@@ -75,7 +75,7 @@ msgstr "_Plik"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Dodaj _nowy aktywator"
+msgstr "_Nowy aktywator"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
@@ -95,7 +95,7 @@ msgstr "Dodaj aktywator"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Save All Changes"
-msgstr "Zapisz wszystkie zmiany"
+msgstr "Zapisuje wszystkie zmiany"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save"
@@ -103,7 +103,7 @@ msgstr "Zapisz"
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
-msgstr "Cofnij ostatnią czynność"
+msgstr "Cofa ostatnią czynność"
 
 #: ../data/ui/MenulibreWindow.ui.h:23
 msgid "Undo"
@@ -111,7 +111,7 @@ msgstr "Cofnij"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
-msgstr "Ponów ostatnią cofniętą czynność"
+msgstr "Ponawia ostatnią cofniętą czynność"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Redo"
@@ -143,15 +143,15 @@ msgstr "Programy"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<b>No applications found.</b>"
-msgstr "<b>Program nie został odnaleziony.</b>"
+msgstr "<b>Nie odnaleziono programu.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Try searching everything."
-msgstr "Spróbuj przeszukać wszystko."
+msgstr "Proszę spróbować przeszukać wszystkie kategorie."
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Search Failed"
-msgstr "Błąd szukania"
+msgstr "Nieudane wyszukiwanie"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<big><b>Application Name</b></big>"
@@ -171,19 +171,19 @@ msgstr "Katalog roboczy"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "<b>Application Settings</b>"
-msgstr "<b>Ustawienia programów</b>"
+msgstr "<b>Ustawienia</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Run in terminal"
-msgstr "Uruchom w terminalu"
+msgstr "Uruchamianie w terminalu"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
-msgstr "Użyj powiadomienia o uruchomieniu"
+msgstr "Powiadamianie o uruchamianiu"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Hide from menus"
-msgstr "Ukryj w menu"
+msgstr "Ukrycie w menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<b>Options</b>"
@@ -211,11 +211,11 @@ msgstr "<b>Kategorie</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "General Settings"
-msgstr "Ustawienia ogólne"
+msgstr "Ogólne"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Show"
-msgstr "Pokaż"
+msgstr "Wyświetlanie"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Shortcut Name"
@@ -223,7 +223,7 @@ msgstr "Nazwa skrótu"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Displayed Name"
-msgstr "Nazwa wyświetlana"
+msgstr "Wyświetlana nazwa"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Quicklists"
@@ -247,19 +247,19 @@ msgstr "<small>Nazwa pliku</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Add Quicklist"
-msgstr "Dodaj szybką listę"
+msgstr "Dodaje szybką listę"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Remove Quicklist"
-msgstr "Usuń szybką listę"
+msgstr "Usuwa szybką listę"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Move Up"
-msgstr "Przesuń w górę"
+msgstr "Przemieszcza w górę"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "Move Down"
-msgstr "Przesuń w dół"
+msgstr "Przemieszcza w dół"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Application Settings"
@@ -272,8 +272,7 @@ msgstr "<big><b>Usunąć aktywator?</b></big>"
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
-msgstr ""
-"Czy na pewno chcesz usunąć ten aktywator? Tej operacji nie można cofnąć."
+msgstr "Usunąć ten aktywator? Tej czynności nie można cofnąć."
 
 #: ../menulibre/MenulibreWindow.py:77 ../menulibre/MenulibreWindow.py:286
 #: ../menulibre/MenulibreWindow.py:1238
@@ -283,7 +282,7 @@ msgstr "Multimedia"
 #: ../menulibre/MenulibreWindow.py:78 ../menulibre/MenulibreWindow.py:271
 #: ../menulibre/MenulibreWindow.py:1228
 msgid "Development"
-msgstr "Rozwój oprogramowania"
+msgstr "Programowanie"
 
 #: ../menulibre/MenulibreWindow.py:79 ../menulibre/MenulibreWindow.py:274
 #: ../menulibre/MenulibreWindow.py:1230
@@ -352,7 +351,7 @@ msgstr "%s (wymagane)"
 #: ../menulibre/MenulibreWindow.py:564
 #, python-format
 msgid "Search %s"
-msgstr "Znajdź %s"
+msgstr "Przeszukiwanie %s"
 
 #: ../menulibre/MenulibreWindow.py:582
 #, python-format
@@ -360,8 +359,8 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "This cannot be undone."
 msgstr ""
-"Czy na pewno chcesz usunąć \"%s\"?\n"
-"Tej operacji nie można cofnąć."
+"Usunąć „%s”?\n"
+"Tej czynności nie można cofnąć."
 
 #: ../menulibre/MenulibreWindow.py:591
 #, python-format
@@ -369,19 +368,19 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "The menu item will be restored to system defaults."
 msgstr ""
-"Czy na pewno chcesz usunąć \"%s\"?\n"
-"Porządek menu zostanie przywrócony do domyślnie systemowego."
+"Usunąć „%s”?\n"
+"Zostanie przywrócone domyślne menu systemowe."
 
 #: ../menulibre/MenulibreWindow.py:600 ../menulibre/MenulibreWindow.py:1209
 #: ../menulibre/MenulibreWindow.py:1374 ../menulibre/MenulibreWindow.py:1524
 #: ../menulibre/MenulibreWindow.py:1729 ../menulibre/MenulibreWindow.py:1735
 #: ../menulibre_lib/MenulibreXdg.py:44
 msgid "New Menu Item"
-msgstr "Nowa pozycja menu"
+msgstr "Nowy elmenent menu"
 
 #: ../menulibre/MenulibreWindow.py:794 ../menulibre/MenulibreWindow.py:815
 msgid "Select an executable"
-msgstr "Wskaż plik wykonalny"
+msgstr "Wybór pliku wykonywalnego"
 
 #: ../menulibre/MenulibreWindow.py:909
 msgid "NewShortcut"
@@ -401,7 +400,7 @@ msgstr "Wszystkie programy"
 
 #: ../menulibre/MenulibreWindow.py:1448
 msgid "Add a new application launcher"
-msgstr "Dodaj nowy aktywator programu"
+msgstr "Tworzy nowy aktywator programu"
 
 #: ../menulibre/MenulibreWindow.py:1779
 msgid "Search Results"
@@ -451,20 +450,22 @@ msgstr "Drobna opisowa informacja o tym programie."
 #: ../menulibre_lib/MenulibreXdg.py:171
 #, python-format
 msgid "'%s' is not a .desktop file"
-msgstr "'%s' nie jest plikiem .desktop"
+msgstr "„%s” nie jest plikiem .desktop"
 
 #: ../menulibre_lib/MenulibreXdg.py:174
 msgid "Initialized without required parameters."
-msgstr "Uruchomione bez wymaganych parametrów."
+msgstr "Zainicjowano bez wymaganych parametrów."
 
 #: ../menulibre_lib/MenulibreXdg.py:183
 #, python-format
 msgid "'%s' is not a .directory file"
-msgstr "'%s' nie jest plikiem .directory"
+msgstr "„%s” nie jest plikiem .directory"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr "Pokazuj wiadomości debugowania (-vv debuguje także menulibre_lib)"
+msgstr ""
+"Wypisuje informacje diagnozowania błędów (-vv odności się także do "
+"menulibre_lib)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -472,7 +473,7 @@ msgstr "Edytor menu"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr "Łatwo edytuj menu systemowe i użytkownika"
+msgstr "Umożliwia modyfikowanie menu systemowego i użytkownika"
 
 #: ../menulibre.desktop.in.h:3
 msgid "Edit user menus"
